syntax = "proto3";

package getCaptcha;

option go_package = "./api;getCaptcha";

service Greeter {
  // Sends a greeting
  rpc Call (HelloRequest) returns (HelloReply) {
    //    option (google.api.http) = {
    //      get: "/helloworld/{name}"
    //    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string uuid = 1;
}

// The response message containing the greetings
message HelloReply {
  string errno = 1;
  string errmsg = 2;
  //二进制的图片类型  byte
  bytes data = 3;
}